--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
         <div class="chart-wrapper">
           <div class="chart-title">
-            Total Users
+            Total money raise to now
           </div>
           <div class="chart-stage">
             <div id="money-rise-container"></div>
@@ -429,7 +429,7 @@
       var moneyRise = new KeenDataviz({
         container: "#money-rise-container",
         type: "metric",
-        title: "Users"
+        title: "Rise to now"
       });
 
       client
@@ -450,7 +450,7 @@
       var moneyCurrentInvested = new KeenDataviz({
         container: "#money-currentinvested-container",
         type: "metric",
-        title: "Users"
+        title: "Invested money"
       });
 
       client
