deleted spared boxes

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           </div>
         </div>
       </div>
-      <div class="chart-wrapper">
+      <!-- <div class="chart-wrapper">
         <div class="chart-title">
           Cell Title
         </div>
@@ -179,8 +179,8 @@
         <div class="chart-notes">
           Notes about this chart
         </div>
-      </div>
-      <div class="chart-wrapper" id="1">
+      </div> -->
+      <!-- <div class="chart-wrapper" id="1">
         <div class="chart-title">
           Cell Title
         </div>
@@ -212,7 +212,7 @@
         <div class="chart-notes">
           Notes about this chart
         </div>
-      </div>
+      </div> -->
     </div>
 
     <div class="container">
