--- a/index.html
+++ b/index.html
@@ -429,7 +429,8 @@
       var moneyRise = new KeenDataviz({
         container: "#money-rise-container",
         type: "metric",
-        title: "Rise to now"
+        title: "Rise to now",
+        prefix: "$"
       });
 
       client
@@ -450,7 +451,8 @@
       var moneyCurrentInvested = new KeenDataviz({
         container: "#money-currentinvested-container",
         type: "metric",
-        title: "Invested money"
+        title: "Invested money",
+        prefix: "$"
       });
 
       client
@@ -471,7 +473,8 @@
       var averageRaise = new KeenDataviz({
         container: "#average-raise",
         type: "metric",
-        title: "Average Raise"
+        title: "Average Raise",
+        prefix: "$"
       });
 
       client
@@ -492,7 +495,8 @@
       var averageBuget = new KeenDataviz({
         container: "#average-budget",
         type: "metric",
-        title: "Average Budget"
+        title: "Average Budget",
+        prefix: "$"
       });
 
       client
